Kubernetes/Assignment 1/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres-db
        image: postgres:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "0.2"
        imagePullPolicy: Never    # To use local image & not to pull from the registry
        ports:
        - protocol: TCP
          containerPort: 5432
