Kubernetes/Assignment 1/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector: 
    app: postgres-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
