Kubernetes/Assignment 1/classroom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classroom-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
      - host: classroom-example.com
        http:
          paths:
          - path: /api/classroom/
            pathType: Prefix
            backend:
              service:
                name: classroom-service
                port:
                  number: 12346
